--- a/functions.html
+++ b/functions.html
@@ -11,7 +11,7 @@
     <title></title>
 
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-    <script src="https://ericranstrom.github.io/TimeCardExporter/functions.ts type="text/javascript"></script>
+    <script src="https://ericranstrom.github.io/TimeCardExporter/functions.js" type="text/javascript"></script>
 
 </head>
 <body>
